# semantic-keyword-playground

./: .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  lifespan.py  main.py
backend/app/models/: dataset.py  search.py
backend/app/routers/: datasets.py  health.py  search.py
backend/app/services/: search_service.py  seed_service.py
backend/scripts/: download_datasets.py  expand_datasets.py  fetch_games.py  fetch_pokemon.py  seed.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DatasetInfoCard.tsx  ExampleQueries.tsx  ExplainerTooltip.tsx  HighlightText.tsx  HybridSearchPanel.tsx  ResultCard.tsx  ResultsPanel.tsx  ScoreBadge.tsx  SearchBar.tsx  VectorViz.tsx
frontend/lib/: api.ts
tests/backend/: conftest.py  test_health.py  test_search.py
tests/e2e/: playwright.config.ts  test_playground.spec.ts
